--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@
 	}
 }
 
+p, h1, h2, h3{
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .change .bar {
 	background-color: whitesmoke;
 }
@@ -58,4 +62,8 @@
 
 #FloatingBall {
 	border-radius: 69% 31% 43% 57% / 47% 38% 62% 53%;
+}
+
+#maintechs {
+	top: 820px;
 }
