--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,20 @@
 	}
 }
 
+html::-webkit-scrollbar {
+	width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+	background: black;
+}
+
+html::-webkit-scrollbar-thumb {
+	background-color: var(--color-blue);
+	border-radius: 20px;
+	border: 3px solid black;
+}
+
 p, h1, h2, h3{
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
